# tama

./: README.md  ex01.html  ex01.qmd  pyproject.toml
reports/: ex01.html  ex01.qmd  ex02.html  ex02.qmd
