[project]
name = "tama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "hydrobr>=0.1.1",
    "jupyter>=1.1.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
]
